--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 789467106869248030
 textchannel = 789172022386491395
 ladderchannel = 
 jungsanchannel = 
