--- a/test_setting.ini
+++ b/test_setting.ini
@@ -3,7 +3,7 @@ timezone = 9
 voicechannel = 789467106869248030
 textchannel = 789172022386491395
 ladderchannel = 
-jungsanchannel = 
+jungsanchannel = 793663150678867989
 killchannel = 
 racingchannel = 
 itemchannel = 
