--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,7 +2,7 @@ timezone = 9
 
 voicechannel = 768848881961140229
 textchannel = 771411974436683786
-ladderchannel = 
+ladderchannel = 769150079755878431
 jungsanchannel = 768848881961140227
 killchannel = 
 racingchannel = 
