--- a/test_setting.ini
+++ b/test_setting.ini
@@ -5,7 +5,7 @@ textchannel = 771411974436683786
 ladderchannel = 769150079755878431
 jungsanchannel = 768848881961140227
 killchannel = 
-racingchannel = 
+racingchannel = 769150079755878431
 itemchannel = 
 
 before_alert = 1
