--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,11 +1,11 @@
 timezone = 9
 
-voicechannel = 768848881961140229
-textchannel = 768848881961140226
-ladderchannel = 793663162242039808
-jungsanchannel = 768848881961140227
+voicechannel = 
+textchannel = 
+ladderchannel = 
+jungsanchannel = 
 killchannel = 
-racingchannel = 793663162242039808
+racingchannel = 
 itemchannel = 
 
 before_alert = 1
@@ -19,10 +19,10 @@ bossInfoNum = 3
 restarttime = 04:30
 restartPeriod = 1
 
-file_name = 
-jsonname = 
-sheetname = 
-inputcell = 
-outputcell = 
+file_name = 베스킨라빈스정산
+jsonname = baskinrobbins-fa3767905bae.json
+sheetname = 최종수령내역
+inputcell = E2
+outputcell = F2
 
 voice_use = 1
