--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 768848881961140229
 textchannel = 768848881961140226
 ladderchannel = 
 jungsanchannel = 
