--- a/test_setting.ini
+++ b/test_setting.ini
@@ -19,7 +19,7 @@ bossInfoNum = 3
 restarttime = 04:30
 restartPeriod = 1
 
-file_name = 베스킨라빈스정산
+file_name = 베라정산
 jsonname = baskinrobbins-fa3767905bae.json
 sheetname = 최종수령내역
 inputcell = E2
