--- a/boss.ini
+++ b/boss.ini
@@ -8,7 +8,7 @@ mungtime = 1
 
 bossname = 글라키
 gentime = 08:00
-nogencheck = 1
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 고요한 분지로 오세요
 mungtime = 1
@@ -27,9 +27,16 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 안타라스의 동굴 6층으로 오세요
 mungtime = 1
 
+bossname = 라하
+gentime = 33:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 아덴 국경지대로 오세요
+mungtime = 1
+
 bossname = 란도르
 gentime = 09:00
-nogencheck = 1
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 망각의 평원으로 오세요
 mungtime = 1
@@ -57,7 +64,7 @@ mungtime = 1
 
 bossname = 망각의거울
 gentime = 11:00
-nogencheck = 1
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 거울의 숲으로 오세요
 mungtime = 1
@@ -244,6 +251,13 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 크루마 습지로 오세요
 mungtime = 1
 
+bossname = 타나토스
+gentime = 25:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 과거의 전장으로 오세요
+mungtime = 1
+
 bossname = 탈라킨
 gentime = 10:00
 nogencheck = 0
@@ -274,7 +288,7 @@ mungtime = 1
 
 bossname = 티미니엘
 gentime = 08:00
-nogencheck = 1
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 티미니엘의 보금자리로 오세요
 mungtime = 1
