--- a/test_setting.ini
+++ b/test_setting.ini
@@ -3,7 +3,7 @@ timezone = 9
 voicechannel = 768848881961140229
 textchannel = 768848881961140226
 ladderchannel = 769150079755878431
-jungsanchannel = 
+jungsanchannel = 821334387312164895
 killchannel = 
 racingchannel = 769150079755878431
 itemchannel = 
