--- a/test_setting.ini
+++ b/test_setting.ini
@@ -19,10 +19,10 @@ bossInfoNum = 3
 restarttime = 04:30
 restartPeriod = 1
 
-file_name = 
-jsonname = 
-sheetname = 
-inputcell = 
-outputcell = 
+file_name = 베스킨&라빈스
+jsonname = baskinrobbins-7c04eee637a6
+sheetname = 최종수령내역
+inputcell = E2
+outputcell = F6, H6, J6, L6
 
 voice_use = 1
