--- a/test_setting.ini
+++ b/test_setting.ini
@@ -20,7 +20,7 @@ restarttime = 04:30
 restartPeriod = 1
 
 file_name = 베스킨&라빈스
-jsonname = baskinrobbins-7c04eee637a6
+jsonname = baskinrobbins-7c04eee637a6.json
 sheetname = 최종수령내역
 inputcell = E2
 outputcell = D6
