--- a/test_setting.ini
+++ b/test_setting.ini
@@ -23,6 +23,6 @@ file_name = 베스킨&라빈스
 jsonname = baskinrobbins-7c04eee637a6.json
 sheetname = 최종수령내역
 inputcell = E2
-outputcell = F2
+outputcell = 
 
 voice_use = 1
