--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,11 +1,11 @@
 timezone = 9
 
-voicechannel = 768848881961140229
-textchannel = 768848881961140226
-ladderchannel = 769150079755878431
-jungsanchannel = 821334387312164895
+voicechannel = 
+textchannel = 
+ladderchannel = 
+jungsanchannel = 
 killchannel = 
-racingchannel = 769150079755878431
+racingchannel = 
 itemchannel = 
 
 before_alert = 1
