--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 832402682236108846
 textchannel = 832402682236108844
 ladderchannel = 
 jungsanchannel = 
