--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,7 +2,7 @@ timezone = 9
 
 voicechannel = 832402682236108846
 textchannel = 832402682236108844
-ladderchannel = 
+ladderchannel = 832402903749885953
 jungsanchannel = 
 killchannel = 
 racingchannel = 
