--- a/test_setting.ini
+++ b/test_setting.ini
@@ -5,7 +5,7 @@ textchannel = 832402682236108844
 ladderchannel = 832402903749885953
 jungsanchannel = 
 killchannel = 
-racingchannel = 
+racingchannel = 832402903749885953
 itemchannel = 
 
 before_alert = 1
