--- a/boss.ini
+++ b/boss.ini
@@ -244,7 +244,7 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다. 크루마탑 7층으로 오세요
 mungtime = 1
 
-bossname = 크루마
+bossname = 크루마, 돌크
 gentime = 08:00
 nogencheck = 0
 before_alert_ment = 입니다
