--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,11 +1,11 @@
 timezone = 9
 
-voicechannel = 838927677154525214
-textchannel = 878965177251409920
-ladderchannel = 832402903749885953
+voicechannel = 
+textchannel = 
+ladderchannel = 
 jungsanchannel = 
 killchannel = 
-racingchannel = 832402903749885953
+racingchannel = 
 itemchannel = 
 
 before_alert = 1
