--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 913427863208878115
 textchannel = 913428258534604871
 ladderchannel = 
 jungsanchannel = 
