--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,7 +2,7 @@ timezone = 9
 
 voicechannel = 913428597631516733
 textchannel = 913430548326809611
-ladderchannel = 
+ladderchannel = 913428317804302366
 jungsanchannel = 
 killchannel = 
 racingchannel = 
